--- a/index.html
+++ b/index.html
@@ -315,8 +315,10 @@
                                     <span class="mobile-arrow"></span>
                                 </div>
                                 <ul class="mobile-submenu">
-                                    <li class="mobilearrow"><a href="academic.html">Management & Mass Comm Department</a></li>
-                                    <li class="mobilearrow"><a href="admission.html">Computer Science Department</a></li>
+                                    <li class="mobilearrow"><a href="academic.html">Management & Mass Comm
+                                            Department</a></li>
+                                    <li class="mobilearrow"><a href="admission.html">Computer Science Department</a>
+                                    </li>
                                     <li class="mobilearrow"><a href="academic-area.html">Commerce Department</a></li>
                                 </ul>
                             </li>
@@ -390,7 +392,8 @@
                                 <ul class="mobile-submenu">
                                     <li class="mobilearrow"><a href="academic.html">Placement Brochure-PG</a></li>
                                     <li class="mobilearrow"><a href="admission.html">Placement Brochure-UG</a></li>
-                                    <li class="mobilearrow"><a href="academic-area.html">Summer Training Brochure</a></li>
+                                    <li class="mobilearrow"><a href="academic-area.html">Summer Training Brochure</a>
+                                    </li>
 
                                 </ul>
                             </li>
@@ -994,7 +997,7 @@
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
-            <div class="swiper TrustSwiper">
+            <div class="swiper TrustSwiper ptsm-4">
                 <div class="swiper-wrapper">
 
                     <div class="swiper-slide m-0">
@@ -1082,9 +1085,7 @@
                         </div>
                     </div>
                     <div class="p-6">
-                        <p class="text-text-secondary text-center mb-4">Comprehensive management education with
-                            specializations in
-                            Marketing, Finance, HR, and Operations</p>
+                        <p class="text-text-secondary text-center mb-4">The B.Com(Hons) Programme is intended to provide advanced knowledge in Commerce specializations</p>
 
                         <div class="flex items-center justify-center pt-4 border-t border-border">
 
@@ -1108,13 +1109,11 @@
                             <span
                                 class="inline-block px-3 py-1 bg-accent text-secondary-900 font-cta font-semibold text-sm rounded-full mb-2">3
                                 Years</span>
-                            <h3 class="text-2xl font-headline font-bold text-white">BCA Program</h3>
+                            <h3 class="text-2xl font-headline font-bold text-white">BCA</h3>
                         </div>
                     </div>
                     <div class="p-6">
-                        <p class="text-text-secondary text-center mb-4">Industry-focused diploma with international
-                            exposure and
-                            corporate mentorship programs and Technologies</p>
+                        <p class="text-text-secondary text-center mb-4">To create a sound academic and conceptual base in the area of Information Technology career in computer application can be shaped</p>
 
                         <div class="flex items-center justify-center pt-4 border-t border-border">
 
@@ -1143,9 +1142,7 @@
                         </div>
                     </div>
                     <div class="p-6">
-                        <p class="text-text-secondary text-center mb-4">Weekend program for working professionals
-                            seeking career
-                            advancement and leadership roles</p>
+                        <p class="text-text-secondary text-center mb-4">To impart contextual Management theories and practical curriculum to develop students as problem solver and decision maker.</p>
 
                         <div class="d-flex align-items-center justify-content-center pt-4 border-t border-border">
 
@@ -1156,7 +1153,7 @@
                     </div>
                 </div>
 
-                <!-- Executive MBA Card -->
+                <!-- Executive BA(hons) Card -->
                 <div class="card card-hover group cta " data-aos="fade-up" data-aos-delay="400">
                     <div class="relative h-64 overflow-hidden">
                         <img loading="lazy"
@@ -1173,9 +1170,93 @@
                         </div>
                     </div>
                     <div class="p-6">
-                        <p class="text-text-secondary text-center mb-4">Weekend program for working professionals
-                            seeking career
-                            advancement and leadership roles</p>
+                        <p class="text-text-secondary text-center mb-4">To develop the learner into competent and efficient Media & Entertainment Industry-ready professionals.</p>
+
+                        <div class="flex items-center justify-center pt-4 border-t border-border">
+
+                            <button class="btn-2 d-flex" onclick="window.location.href='javascript:void(0)'">
+                                Explore Program
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <!-- Executive MCA Card -->
+                <div class="card card-hover group cta " data-aos="fade-up" data-aos-delay="500">
+                    <div class="relative h-64 overflow-hidden">
+                        <img loading="lazy"
+                            src="https://img.rocket.new/generatedImages/rocket_gen_img_135744f45-1765064754011.png"
+                            alt="Executive MBA professionals in leadership workshop"
+                            class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110"
+                            onerror="this.src='https://images.pexels.com/photos/3184291/pexels-photo-3184291.jpeg?auto=compress&cs=tinysrgb&w=800'; this.onerror=null;">
+                        <div class="absolute inset-0 bg-gradient-to-t from-secondary-900/90 to-transparent"></div>
+                        <div class="absolute bottom-4 left-4 right-4">
+                            <span
+                                class="inline-block px-3 py-1 bg-accent text-secondary-900 font-cta font-semibold text-sm rounded-full mb-2">2
+                                Years</span>
+                            <h3 class="text-2xl font-headline font-bold text-white">MCA</h3>
+                        </div>
+                    </div>
+                    <div class="p-6">
+                        <p class="text-text-secondary text-center mb-4">The Master of Computer Applications (MCA)
+                            programme aims at preparing Information Technology.</p>
+
+                        <div class="flex items-center justify-center pt-4 border-t border-border">
+
+                            <button class="btn-2 d-flex" onclick="window.location.href='javascript:void(0)'">
+                                Explore Program
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <!-- Executive MBA Card -->
+                <div class="card card-hover group cta " data-aos="fade-up" data-aos-delay="600">
+                    <div class="relative h-64 overflow-hidden">
+                        <img loading="lazy"
+                            src="https://img.rocket.new/generatedImages/rocket_gen_img_135744f45-1765064754011.png"
+                            alt="Executive MBA professionals in leadership workshop"
+                            class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110"
+                            onerror="this.src='https://images.pexels.com/photos/3184291/pexels-photo-3184291.jpeg?auto=compress&cs=tinysrgb&w=800'; this.onerror=null;">
+                        <div class="absolute inset-0 bg-gradient-to-t from-secondary-900/90 to-transparent"></div>
+                        <div class="absolute bottom-4 left-4 right-4">
+                            <span
+                                class="inline-block px-3 py-1 bg-accent text-secondary-900 font-cta font-semibold text-sm rounded-full mb-2">2
+                                Years</span>
+                            <h3 class="text-2xl font-headline font-bold text-white">MBA</h3>
+                        </div>
+                    </div>
+                    <div class="p-6">
+                        <p class="text-text-secondary text-center mb-4">To prepare dynamic global managers capable of
+                            answering corporate challenges and demonstrating high ethical.
+
+                        </p>
+
+                        <div class="flex items-center justify-center pt-4 border-t border-border">
+
+                            <button class="btn-2 d-flex" onclick="window.location.href='javascript:void(0)'">
+                                Explore Program
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <!-- Executive M.COM Card -->
+                <div class="card card-hover group cta " data-aos="fade-up" data-aos-delay="700">
+                    <div class="relative h-64 overflow-hidden">
+                        <img loading="lazy"
+                            src="https://img.rocket.new/generatedImages/rocket_gen_img_135744f45-1765064754011.png"
+                            alt="Executive MBA professionals in leadership workshop"
+                            class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110"
+                            onerror="this.src='https://images.pexels.com/photos/3184291/pexels-photo-3184291.jpeg?auto=compress&cs=tinysrgb&w=800'; this.onerror=null;">
+                        <div class="absolute inset-0 bg-gradient-to-t from-secondary-900/90 to-transparent"></div>
+                        <div class="absolute bottom-4 left-4 right-4">
+                            <span
+                                class="inline-block px-3 py-1 bg-accent text-secondary-900 font-cta font-semibold text-sm rounded-full mb-2">2
+                                Years</span>
+                            <h3 class="text-2xl font-headline font-bold text-white">M.COM</h3>
+                        </div>
+                    </div>
+                    <div class="p-6">
+                        <p class="text-text-secondary text-center mb-4">To provide basic understanding about accounting
+                            and financial decisions to the students</p>
 
                         <div class="flex items-center justify-center pt-4 border-t border-border">
 
@@ -2162,15 +2243,16 @@
             new Swiper(container, {
                 loop: true,
                 spaceBetween: 30,
-                speed: 6000,
+                speed: 5000,
+                centeredSlides:true,
                 autoplay: {
-                    delay: 0,
+                    delay: 2000,
                     disableOnInteraction: false,
                     reverseDirection: index === 0 // TOP SLIDER swipes RIGHT 👉
                 },
                 breakpoints: {
                     0: { slidesPerView: 2 },
-                    480: { slidesPerView: 3 },
+                    480: { slidesPerView: 2 },
                     780: { slidesPerView: 3 },
                     1024: { slidesPerView: 4 },
                 }
