--- a/index.html
+++ b/index.html
@@ -956,6 +956,7 @@
 
                         </div>
                     </div>
+                    
 
                     <div class="swiper-slide m-0">
                         <div class="text-center">
@@ -997,7 +998,7 @@
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
-            <div class="swiper TrustSwiper ptsm-4">
+            <div class="swiper TrustSwiper pt-sm-4">
                 <div class="swiper-wrapper">
 
                     <div class="swiper-slide m-0">
@@ -2244,7 +2245,6 @@
                 loop: true,
                 spaceBetween: 30,
                 speed: 5000,
-                centeredSlides:true,
                 autoplay: {
                     delay: 2000,
                     disableOnInteraction: false,
