--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Navigation Header -->
     <header class="fixed top-0 left-0 right-0 z-50 bg-white/95 backdrop-blur-sm shadow-md transition-all duration-300"
         id="mainHeader">
-        <div class="header__border d-none d-md-block">
+        <div class="header__border">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-xxl-12 col-xl-12 col-lg-12 col-md-12">
@@ -80,7 +80,7 @@
             </div>
 
         </div>
-        <div class="centernavbar text-center d-none d-md-block">
+        <div class="centernavbar text-center">
             <p class="pt-1 mb-0 fw-medium">Admission Helpline : 9161337733, 7052055555, 8953761666, 8400277770,
                 9628700005</p>
         </div>
