--- a/index.html
+++ b/index.html
@@ -786,16 +786,18 @@
         <div class="container">
             <div class="teacher__courses pt-5">
                 <div class="section__title-wrapper mb-5 text-center">
-                     <span
-                    class="inline-block px-4 py-2 bg-blue color-yellow font-cta font-semibold rounded-full mb-4">Important Links</span>
-                    <h2 class="text-text-secondary section__title section__title-44">Explore all key portals, updates, and opportunities at
+                    <span
+                        class="inline-block px-4 py-2 bg-blue color-yellow font-cta font-semibold rounded-full mb-4">Important
+                        Links</span>
+                    <h2 class="text-text-secondary section__title section__title-44">Explore all key portals, updates,
+                        and opportunities at
                         SMS Varanasi.</h2>
                 </div>
                 <div class="teacher__course-wrapper">
                     <div class="row g-sm-5 g-3">
                         <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6">
-                            <div class="course__item-3 transition-3 white-bg mb-30 fix" data-aos="fade-up"
-                    data-aos-delay="300">
+                            <div class="course__item-3 white-bg mb-30 fix" data-aos="fade-up"
+                                data-aos-delay="300">
                                 <div class="course__icon-3 text-center ps-1">
                                     <span>
                                         <svg width="26" height="28" viewBox="-0.5 0 25 25" fill="none"
@@ -829,8 +831,8 @@
                             </div>
                         </div>
                         <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6">
-                            <div class="course__item-3 transition-3 white-bg mb-30 fix "data-aos="fade-up"
-                    data-aos-delay="350">
+                            <div class="course__item-3 white-bg mb-30 fix " data-aos="fade-up"
+                                data-aos-delay="350">
                                 <div class="course__icon-3 ps-1 text-center">
                                     <span>
                                         <svg width="20" height="26" viewBox="0 0 20 26" fill="none"
@@ -854,9 +856,8 @@
                             </div>
                         </div>
                         <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6">
-                            <div
-                                class="course__item-3 transition-3 white-bg mb-30 fix " data-aos="fade-up"
-                    data-aos-delay="400">
+                            <div class="course__item-3 white-bg mb-30 fix " data-aos="fade-up"
+                                data-aos-delay="400">
                                 <div class="course__icon-3 ps-1 text-center">
                                     <span>
                                         <svg width="26" height="28" viewBox="0 0 26 28" fill="none"
@@ -887,9 +888,8 @@
                             </div>
                         </div>
                         <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6">
-                            <div
-                                class="course__item-3 transition-3 white-bg mb-30 fix"data-aos="fade-up"
-                    data-aos-delay="450">
+                            <div class="course__item-3 white-bg mb-30 fix" data-aos="fade-up"
+                                data-aos-delay="450">
                                 <div class="course__icon-3 ps-1 text-center">
                                     <span>
                                         <svg fill="" width="26" height="28" viewBox="0 0 16 16" id="register-16px"
@@ -913,9 +913,8 @@
                             </div>
                         </div>
                         <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6">
-                            <div
-                                class="course__item-3 transition-3 white-bg mb-30 fix" data-aos="fade-up"
-                    data-aos-delay="500">
+                            <div class="course__item-3 white-bg mb-30 fix" data-aos="fade-up"
+                                data-aos-delay="500">
                                 <div class="course__icon-3 ps-1 text-center">
                                     <span>
                                         <svg width="28" height="34" viewBox="0 0 28 34" fill="none"
@@ -957,9 +956,8 @@
                             </div>
                         </div>
                         <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6">
-                            <div
-                                class="course__item-3 transition-3 white-bg mb-30 fix " data-aos="fade-up"
-                    data-aos-delay="550">
+                            <div class="course__item-3 white-bg mb-30 fix " data-aos="fade-up"
+                                data-aos-delay="550">
                                 <div class="course__icon-3 ps-1 text-center">
                                     <span>
                                         <svg width="22" height="21" viewBox="0 0 22 21" fill="none"
@@ -986,9 +984,8 @@
                             </div>
                         </div>
                         <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6">
-                            <div
-                                class="course__item-3 transition-3 white-bg mb-30 fix " data-aos="fade-up"
-                    data-aos-delay="600">
+                            <div class="course__item-3 white-bg mb-30 fix " data-aos="fade-up"
+                                data-aos-delay="600">
                                 <div class="course__icon-3 ps-1 text-center">
                                     <span>
                                         <svg width="26" height="28" viewBox="0 0 24 24" fill="none"
@@ -1024,9 +1021,8 @@
                             </div>
                         </div>
                         <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6">
-                            <div
-                                class="course__item-3 transition-3 white-bg mb-30 fix" data-aos="fade-up"
-                    data-aos-delay="650">
+                            <div class="course__item-3 white-bg mb-30 fix" data-aos="fade-up"
+                                data-aos-delay="650">
                                 <div class="course__icon-3 ps-1 text-center">
                                     <span>
                                         <svg viewBox="0 0 24 24" fill="none" width="26" height="28"
@@ -1056,8 +1052,8 @@
                             </div>
                         </div>
                         <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6">
-                            <div class="course__item-3 transition-3 white-bg mb-30 fix" data-aos="fade-up"
-                    data-aos-delay="700">
+                            <div class="course__item-3 white-bg mb-30 fix" data-aos="fade-up"
+                                data-aos-delay="700">
                                 <div class="course__icon-3 ps-1 text-center">
                                     <span>
                                         <svg width="26" height="28" viewBox="0 0 26 28" fill="none"
