--- a/test.html
+++ b/test.html
@@ -70,7 +70,7 @@
                                     <a href="cuetpg-2025.html" target="_blank"> CUET(PG)-2025</a>
                                 </li>
                                 <li>
-                                    <a href="https://smslawcollege.com/" target="_blank"> SMSLAW COLLEG</a>
+                                    <a href="https://smslawcollege.com/" target="_blank"> SMS Law College</a>
                                 </li>
                             </ul>
                         </div>
@@ -568,7 +568,7 @@
                                     <a href="cuetpg-2025.html" target="_blank"> CUET(PG)-2025</a>
                                 </li>
                                 <li>
-                                    <a href="https://smslawcollege.com/" target="_blank"> SMSLAW COLLEG</a>
+                                    <a href="https://smslawcollege.com/" target="_blank"> SMS Law College</a>
                                 </li>
                             </ul>
                         </div>
