--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Navigation Header -->
     <header class="fixed top-0 left-0 right-0 z-50 bg-white/95 backdrop-blur-sm shadow-md transition-all duration-300"
         id="mainHeader">
-        <div class="header__border">
+        <div class="header__border d-sm-block d-none">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-xxl-12 col-xl-12 col-lg-12 col-md-12">
@@ -70,7 +70,7 @@
                                     <a href="cuetpg-2025.html" target="_blank"> CUET(PG)-2025</a>
                                 </li>
                                 <li>
-                                    <a href="https://smslawcollege.com/" target="_blank"> SMSLAW COLLEG</a>
+                                    <a href="https://smslawcollege.com/" target="_blank"> SMS Law College</a>
                                 </li>
                             </ul>
                         </div>
@@ -80,7 +80,7 @@
             </div>
 
         </div>
-        <div class="centernavbar text-center">
+        <div class="centernavbar text-center  d-sm-block d-none">
             <p class="pt-1 mb-0 fw-medium">Admission Helpline : 9161337733, 7052055555, 8953761666, 8400277770,
                 9628700005</p>
         </div>
@@ -522,6 +522,68 @@
 
 
         </nav>
+        <!-- mobile -->
+        <div class="header__border d-sm-none">
+            <div class="container">
+                <div class="row align-items-center">
+
+                    <div class="col-xxl-12 col-xl-12 col-lg-12 col-md-12 col-12">
+                        <div class="header__info">
+                            <ul>
+                                <li>
+                                    <a href="#"> HOME</a>
+                                </li>
+                                <li>
+                                    <a href="/contact-us.html" target="_blank"> CONTACT US</a>
+                                </li>
+                                <li>
+                                    <a href="https://online.smsvaranasi.com/" target="_blank"> APPLY ONLINE</a>
+                                </li>
+                                <li>
+                                    <a href="https://epay.smsvaranasi.com/" target="_blank">ONLINE FEE
+                                        DEPOSIT</a>
+                                </li>
+                                <li>
+                                    <a href="https://jobs.smsvaranasi.com/" target="_blank"> JOBS@SMS</a>
+                                </li>
+                                <li>
+                                    <a href="https://blog.smsvaranasi.com/" target="_blank"> BLOG</a>
+                                </li>
+                                <li>
+                                    <a href="https://iqac.smsvaranasi.com/" target="_blank"> IQAC</a>
+                                </li>
+                                <li>
+                                    <a href="nirf.html" target="_blank"> NIRF</a>
+                                </li>
+                                <li>
+                                    <a href="https://www.sifdt.com/" target="_blank"> SIFDT</a>
+                                </li>
+                                <li>
+                                    <a href="https://www.sifdt.com/" target="_blank"> E-Tender</a>
+                                </li>
+                                <li>
+                                    <a href="/cuetug-2025.html" target="_blank"> CUET(UG)-2025</a>
+                                </li>
+                                <li>
+                                    <a href="cuetpg-2025.html" target="_blank"> CUET(PG)-2025</a>
+                                </li>
+                                <li>
+                                    <a href="https://smslawcollege.com/" target="_blank"> SMS Law College</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+
+        <div class="centernavbar text-center d-sm-none">
+            <p class="pt-1 mb-0 fw-medium">Admission Helpline : 9161337733, 7052055555, 8953761666, 8400277770,
+                9628700005</p>
+        </div>
+
     </header>
 
     <!-- Hero Section with Video Background -->
@@ -796,8 +858,7 @@
                 <div class="teacher__course-wrapper">
                     <div class="row g-sm-5 g-3">
                         <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6">
-                            <div class="course__item-3 white-bg mb-30 fix" data-aos="fade-up"
-                                data-aos-delay="300">
+                            <div class="course__item-3 white-bg mb-30 fix" data-aos="fade-up" data-aos-delay="300">
                                 <div class="course__icon-3 text-center ps-1">
                                     <span>
                                         <svg width="26" height="28" viewBox="-0.5 0 25 25" fill="none"
@@ -831,8 +892,7 @@
                             </div>
                         </div>
                         <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6">
-                            <div class="course__item-3 white-bg mb-30 fix " data-aos="fade-up"
-                                data-aos-delay="350">
+                            <div class="course__item-3 white-bg mb-30 fix " data-aos="fade-up" data-aos-delay="350">
                                 <div class="course__icon-3 ps-1 text-center">
                                     <span>
                                         <svg width="20" height="26" viewBox="0 0 20 26" fill="none"
@@ -856,8 +916,7 @@
                             </div>
                         </div>
                         <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6">
-                            <div class="course__item-3 white-bg mb-30 fix " data-aos="fade-up"
-                                data-aos-delay="400">
+                            <div class="course__item-3 white-bg mb-30 fix " data-aos="fade-up" data-aos-delay="400">
                                 <div class="course__icon-3 ps-1 text-center">
                                     <span>
                                         <svg width="26" height="28" viewBox="0 0 26 28" fill="none"
@@ -888,8 +947,7 @@
                             </div>
                         </div>
                         <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6">
-                            <div class="course__item-3 white-bg mb-30 fix" data-aos="fade-up"
-                                data-aos-delay="450">
+                            <div class="course__item-3 white-bg mb-30 fix" data-aos="fade-up" data-aos-delay="450">
                                 <div class="course__icon-3 ps-1 text-center">
                                     <span>
                                         <svg fill="" width="26" height="28" viewBox="0 0 16 16" id="register-16px"
@@ -913,8 +971,7 @@
                             </div>
                         </div>
                         <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6">
-                            <div class="course__item-3 white-bg mb-30 fix" data-aos="fade-up"
-                                data-aos-delay="500">
+                            <div class="course__item-3 white-bg mb-30 fix" data-aos="fade-up" data-aos-delay="500">
                                 <div class="course__icon-3 ps-1 text-center">
                                     <span>
                                         <svg width="28" height="34" viewBox="0 0 28 34" fill="none"
@@ -956,8 +1013,7 @@
                             </div>
                         </div>
                         <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6">
-                            <div class="course__item-3 white-bg mb-30 fix " data-aos="fade-up"
-                                data-aos-delay="550">
+                            <div class="course__item-3 white-bg mb-30 fix " data-aos="fade-up" data-aos-delay="550">
                                 <div class="course__icon-3 ps-1 text-center">
                                     <span>
                                         <svg width="22" height="21" viewBox="0 0 22 21" fill="none"
@@ -984,8 +1040,7 @@
                             </div>
                         </div>
                         <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6">
-                            <div class="course__item-3 white-bg mb-30 fix " data-aos="fade-up"
-                                data-aos-delay="600">
+                            <div class="course__item-3 white-bg mb-30 fix " data-aos="fade-up" data-aos-delay="600">
                                 <div class="course__icon-3 ps-1 text-center">
                                     <span>
                                         <svg width="26" height="28" viewBox="0 0 24 24" fill="none"
@@ -1021,8 +1076,7 @@
                             </div>
                         </div>
                         <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6">
-                            <div class="course__item-3 white-bg mb-30 fix" data-aos="fade-up"
-                                data-aos-delay="650">
+                            <div class="course__item-3 white-bg mb-30 fix" data-aos="fade-up" data-aos-delay="650">
                                 <div class="course__icon-3 ps-1 text-center">
                                     <span>
                                         <svg viewBox="0 0 24 24" fill="none" width="26" height="28"
@@ -1052,8 +1106,7 @@
                             </div>
                         </div>
                         <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6">
-                            <div class="course__item-3 white-bg mb-30 fix" data-aos="fade-up"
-                                data-aos-delay="700">
+                            <div class="course__item-3 white-bg mb-30 fix" data-aos="fade-up" data-aos-delay="700">
                                 <div class="course__icon-3 ps-1 text-center">
                                     <span>
                                         <svg width="26" height="28" viewBox="0 0 26 28" fill="none"
