--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 
 </head>
 
@@ -910,7 +915,7 @@
                                 </div>
                                 <div class="course__content-2">
                                     <h3 class="course__title-2">
-                                        <a href="#">GDPI Schedule</a>
+                                        <a href="#">13th International Conference on Spirituality</a>
                                     </h3>
                                 </div>
                             </div>
@@ -1136,6 +1141,8 @@
                                 </div>
                             </div>
                         </div>
+
+                        
                     </div>
                 </div>
             </div>
