--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="format-detection" content="telephone=no">
     <meta name="description"
         content="School of Management Sciences, Varanasi is a NAAC ‘A’ accredited Autonomous College in Varanasi Affiliated to AKTU and MGKVP ranked among top 50 B-schools offering professional courses like MBA, MCA, M.Com, BBA, B.Com(Hons), BCA and BA(Hons) Mass Comm. with a robust placement record, in renowned companies across India.">
     <meta name="keywords"
