commit add new page programms

--- a/index.html
+++ b/index.html
@@ -367,13 +367,13 @@
                             <span class="mobile-arrow"></span>
                         </div>
                         <ul class="mobile-submenu">
-                            <li><a href="academic.html">MBA</a></li>
-                            <li><a href="academic.html">MCA</a></li>
-                            <li><a href="academic.html">MCOM</a></li>
-                            <li><a href="academic.html">BBA</a></li>
-                            <li><a href="admission.html">BCA</a></li>
-                            <li><a href="academic-area.html">BCOM</a></li>
-                            <li><a href="campus-life.html">BA.HONS (Mass Comm.)</a></li>
+                            <li><a href="programs.html">MBA</a></li>
+                            <li><a href="programs.html">MCA</a></li>
+                            <li><a href="programs.html">MCOM</a></li>
+                            <li><a href="programs.html">BBA</a></li>
+                            <li><a href="programs.html">BCA</a></li>
+                            <li><a href="programs.html">BCOM</a></li>
+                            <li><a href="programs.html">BA.HONS (Mass Comm.)</a></li>
                         </ul>
                     </li>
 
@@ -1143,7 +1143,7 @@
                             </div>
                         </div>
 
-                        
+
                     </div>
                 </div>
             </div>
