commit remaininng changes

--- a/programs.html
+++ b/programs.html
@@ -752,13 +752,13 @@
 
                                         <p>The following is the fee structure inclusive of Tuition and other Fees for
                                             the above
-                                            mentioned MBA Course run by school of management Sciences.</p>
+                                            mentioned BCA Course run by school of management Sciences.</p>
 
                                         <div class="course__description-list mb-4">
                                             <div class="courseHead">
                                                 <img src="public/images/icons/graduation-hat-and-diploma.png" alt=""
                                                     style="height: 28px;width: 28px;">
-                                                <h4 class="color-blue">Programme MBA</h4>
+                                                <h4 class="color-blue">Programme BCA</h4>
                                             </div>
 
                                             <div class="table-responsive">
@@ -951,7 +951,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="course__related py-sm-5">
+                                        <div class="course__related py-sm-5 py-2">
                                             <div class="row">
                                                 <div class="col-xxl-12">
                                                     <div class="section__title-wrapper ">
@@ -1939,8 +1939,8 @@
                                 </div>
                                 <div class="tab-pane fade" id="review" role="tabpanel" aria-labelledby="review-tab">
                                     <div class="course__description">
-                                        <h3 class="color-blue">Programme Learning Outcomes for MBA</h3>
-                                        <p>The following learning outcomes have been identified for the students of MBA
+                                        <h3 class="color-blue">Programme Learning Outcomes for BCA</h3>
+                                        <p>The following learning outcomes have been identified for the students of BCA
                                             programme</p>
                                         <ol>
                                             <li>
