--- a/index.html
+++ b/index.html
@@ -155,13 +155,13 @@
                         <li class="nav-item has-child  has-arrow"> <a href="programs.html"
                                 class="font-cta font-semibold text-text-primary hover:text-primary transition-colors duration-300">PROGRAMS</a>
                             <ul class="submenu sub__style">
-                                <li><a href="academic.html">MBA</a></li>
-                                <li><a href="academic.html">MCA</a></li>
-                                <li><a href="academic.html">MCOM</a></li>
-                                <li><a href="academic.html">BBA</a></li>
-                                <li><a href="admission.html">BCA</a></li>
-                                <li><a href="academic-area.html">BCOM (Hons)</a></li>
-                                <li><a href="campus-life.html">B.A.Hons (Mass Comm.)</a></li>
+                                <li><a href="programs.html">MBA</a></li>
+                                <li><a href="programs.html">MCA</a></li>
+                                <li><a href="programs.html">MCOM</a></li>
+                                <li><a href="programs.html">BBA</a></li>
+                                <li><a href="programs.html">BCA</a></li>
+                                <li><a href="programs.html">BCOM (Hons)</a></li>
+                                <li><a href="programs.html">B.A.Hons (Mass Comm.)</a></li>
                             </ul>
                         </li>
                         <li class="nav-item has-child has-arrow "><a href="javascript:void(0)"
