add overflow hidden

--- a/programs.html
+++ b/programs.html
@@ -965,7 +965,7 @@
                                             </div>
                                             <div class="row py-2">
                                                 <div class="col-12">
-                                                    <div class="course__slider swiper-container">
+                                                    <div class="course__slider swiper-container overflow-hidden">
                                                         <div class="swiper-wrapper">
                                                             <div class="course__item-2 swiper-slide transition-3 white-bg mb-3 fix"
                                                                 style="height:-webkit-fill-available;">
